# ComfyUI-PowerPanel

./: README.md  README_zh.md  __init__.py  pyproject.toml
example_workflows/: PowerPanel_Example(img2img).json
web/: app_view.html  appbuilder.js  config_panel.html  power_panel.js
web/i18n/: zh.json
